{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 87,
  "lineage": "b3af67e3-5a2d-7ebf-95b3-89ea4e43a694",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apiend_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d72852800cbf29e",
            "arn": "arn:aws:ec2:us-east-2:198226137196:instance/i-030caf56c3d9aef70",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030caf56c3d9aef70",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "apiend-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f4ec8860c2b71bf",
            "private_dns": "ip-10-0-3-97.us-east-2.compute.internal",
            "private_ip": "10.0.3.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ddcd9b609af80d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ede9d0c5b3bde72",
            "tags": {
              "Name": "apiend_instance-us-east-2a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0aa4855fedf640b3a"
            ]
          },
          "dependencies": [
            "aws_security_group.private_subnet_1",
            "aws_subnet.dmz",
            "aws_subnet.private_subnet_1",
            "aws_vpc.main_vpc",
            "data.aws_ami.linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d72852800cbf29e",
            "arn": "arn:aws:ec2:us-east-2:198226137196:instance/i-0e47f6aae6243d2ae",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e47f6aae6243d2ae",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "apiend-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e97847cb83ce9c2f",
            "private_dns": "ip-10-0-5-140.us-east-2.compute.internal",
            "private_ip": "10.0.5.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c940b25e0f8be829",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b5dd1e34beae261",
            "tags": {
              "Name": "apiend_instance-us-east-2b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0aa4855fedf640b3a"
            ]
          },
          "dependencies": [
            "aws_security_group.private_subnet_1",
            "aws_subnet.dmz",
            "aws_subnet.private_subnet_1",
            "aws_vpc.main_vpc",
            "data.aws_ami.linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privsub1_to_privsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4e6961f01f5efc8",
            "owner_id": "198226137196",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.9.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0e47f6aae6243d2ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0e97847cb83ce9c2f",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route from Private_sub_2 to Private_sub_1 - 1"
            },
            "vpc_id": "vpc-0f1546de80228c686"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198226137196:security-group/sg-0aa4855fedf640b3a",
            "description": "Rules on what to allow in or out",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.4.0/24"
                ],
                "description": "Communication to openapi page",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "10.0.21.0/24",
                  "10.0.22.0/24"
                ],
                "description": "PING",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.21.0/24",
                  "10.0.22.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.7.0/24",
                  "10.0.9.0/24"
                ],
                "description": "Communication to DB",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0aa4855fedf640b3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.4.0/24"
                ],
                "description": "Communication to openapi page",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "10.0.21.0/24",
                  "10.0.22.0/24"
                ],
                "description": "PING",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.21.0/24",
                  "10.0.22.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.7.0/24",
                  "10.0.9.0/24"
                ],
                "description": "Communication to DB",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "Security group instances in the private subnet 1",
            "name_prefix": "",
            "owner_id": "198226137196",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1546de80228c686"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198226137196:subnet/subnet-0dee29d96ca65261c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-0dee29d96ca65261c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "198226137196",
            "tags": {
              "Name": "DEV-DMZ-subnet"
            },
            "tags_all": {
              "Name": "DEV-DMZ-subnet"
            },
            "vpc_id": "vpc-0f1546de80228c686"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198226137196:subnet/subnet-056f9ca8dcb9007b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-056f9ca8dcb9007b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "198226137196",
            "tags": {
              "Name": "DEV-DMZ-subnet"
            },
            "tags_all": {
              "Name": "DEV-DMZ-subnet"
            },
            "vpc_id": "vpc-0f1546de80228c686"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198226137196:subnet/subnet-08ede9d0c5b3bde72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08ede9d0c5b3bde72",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198226137196",
            "tags": {
              "Name": "DEV-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "DEV-Private-Subnet-1"
            },
            "vpc_id": "vpc-0f1546de80228c686"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198226137196:subnet/subnet-08b5dd1e34beae261",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-08b5dd1e34beae261",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198226137196",
            "tags": {
              "Name": "DEV-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "DEV-Private-Subnet-1"
            },
            "vpc_id": "vpc-0f1546de80228c686"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:198226137196:vpc/vpc-0f1546de80228c686",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078a1856a0f265fc3",
            "default_route_table_id": "rtb-025b14bdc775df783",
            "default_security_group_id": "sg-0b0cf8de709209b9e",
            "dhcp_options_id": "dopt-e771eb8c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f1546de80228c686",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-025b14bdc775df783",
            "owner_id": "198226137196",
            "tags": {
              "Name": "dev.instance"
            },
            "tags_all": {
              "Name": "dev.instance"
            }
          }
        }
      ]
    }
  ]
}